2013-08-20  Antonio Ceballos  <aceballos@gmail.com>

	* src/book.bin: deleted - moved to src/smallbook.bin.
	* src/smallbook.bin: added.
	* src/gnuchess.ini: default book name changed to smallbook.bin.
	* Makefile.am: book.bin replaced by smallbook.bin.

2013-08-19  Antonio Ceballos  <aceballos@gmail.com>

	* doc/gnuchess.info: graphic mode explained.

2013-08-19  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/cmd.c: graphic mode usage and help improved;
	replace 'prior' by 'first' for pgnload.
	* src/frontend/common.h: replace 'prior' by 'first' for pgnload.

2013-08-19  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: avoid 100% CPU usage in UCI mode.

2013-08-18  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: graphic mode and pgnload enhancements.
	* src/frontend/output.c: likewise.
	* src/frontend/cmd.c: likewise.
	* src/frontend/pgn.c: likewise.
	* src/frontend/common.h: likewise.
	* AUTHORS: likewise.

2013-03-11  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: Copyright year updated to 2013.

2013-03-10  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: explicit package name in AC_INIT.

2013-03-10  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.0.3
	* NEWS: changes in version 6.0.3
	* doc/gnuchess.texi: date
	* doc/version.texi: version


2013-03-10  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: replace AM_CONFIG_HEADER by AC_CONFIG_HEADERS;
	modernize AM_INIT_AUTOMAKE.

2013-03-10  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/cmd.c: if in manual mode, keep it after undo.
	* src/main.cc: sleep 100us in main loop to avoid 100% CPU.

2012-08-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/pgn.cpp: Ignore rest of line instead of
	crashing when unexpected token is found in game line.
	This way, book_1.01.pgn can be successfully read.

2012-08-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/output.c: removed unused code.